# L-system-trees

./: CMakeLists.txt  README.md
include/: abstract_builder.h  branch_builder.h  camera.h  interpreter.h  junction_builder.h  leaf_builder.h  lindenmayer.h  mesh.h  shader.h  tree.h  utils.h
lib/glad/include/glad/: glad.h
shaders/: fshader.glsl  vshader.glsl
src/: branch_builder.cpp  camera.cpp  glad.c  interpreter.cpp  junction_builder.cpp  leaf_builder.cpp  lindenmayer.cpp  main.cpp  mesh.cpp  shader.cpp  tree.cpp  utils.cpp
